kamera, observer, composite

--- a/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj
+++ b/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj
@@ -143,6 +143,10 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Transformation.cpp" />
+    <ClCompile Include="TransformationComposite.cpp" />
+    <ClCompile Include="TransformationRotate.cpp" />
+    <ClCompile Include="TransformationScale.cpp" />
+    <ClCompile Include="TransformationTranslate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -154,9 +158,14 @@
     <ClInclude Include="ModelSphere.h" />
     <ClInclude Include="ModelSuzi.h" />
     <ClInclude Include="ModelTree.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Transformation.h" />
+    <ClInclude Include="TransformationComposite.h" />
+    <ClInclude Include="TransformationRotate.h" />
+    <ClInclude Include="TransformationScale.h" />
+    <ClInclude Include="TransformationTranslate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
