--- a/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj.filters
+++ b/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="TransformationComposite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TransformationBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ShaderProgram.h">
@@ -117,6 +120,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TransformationComposite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformationBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
