--- a/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj
+++ b/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Transformation.cpp" />
+    <ClCompile Include="TransformationBuilder.cpp" />
     <ClCompile Include="TransformationComposite.cpp" />
     <ClCompile Include="TransformationRotate.cpp" />
     <ClCompile Include="TransformationScale.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Transformation.h" />
+    <ClInclude Include="TransformationBuilder.h" />
     <ClInclude Include="TransformationComposite.h" />
     <ClInclude Include="TransformationRotate.h" />
     <ClInclude Include="TransformationScale.h" />
