--- a/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj.filters
+++ b/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="TransformationBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TransformationRandomizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ShaderProgram.h">
@@ -107,7 +110,7 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Observer.h">
+    <ClInclude Include="IObserver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TransformationScale.h">
@@ -123,6 +126,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TransformationBuilder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformationRandomizer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ISubject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
