--- a/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj
+++ b/ZPG_BLU0015/ZPG_BLU0015/ZPG_BLU0015.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Callbacks.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DrawableObject.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelBush.cpp" />
@@ -141,6 +142,7 @@
     <ClCompile Include="ModelSuzi.cpp" />
     <ClCompile Include="ModelTree.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Transformation.cpp" />
     <ClCompile Include="TransformationBuilder.cpp" />
@@ -155,6 +157,7 @@
     <ClInclude Include="Callbacks.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="DrawableObject.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelBush.h" />
     <ClInclude Include="ModelSphere.h" />
@@ -162,6 +165,7 @@
     <ClInclude Include="ModelTree.h" />
     <ClInclude Include="IObserver.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="ISubject.h" />
     <ClInclude Include="Transformation.h" />
@@ -171,6 +175,10 @@
     <ClInclude Include="TransformationRotate.h" />
     <ClInclude Include="TransformationScale.h" />
     <ClInclude Include="TransformationTranslate.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ShaderLambert.frag" />
+    <None Include="ShaderLambert.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
